--- a/src/configs/pima_diabetes.yaml
+++ b/src/configs/pima_diabetes.yaml
@@ -2,6 +2,9 @@ CONFIGS:
   DIABS_PATH: '../data/diabetes.csv'
   EXCLUDE_COLS: ['Outcome', 'Pregnancies']
   FEATURES: ['BloodPressure', 'BMI', 'Glucose', 'Insulin', 'SkinThickness']
+  POLICY: 'mean'
+  MODELS: ['mlp', 'rf', 'lr']
+  BASELINES: [null, 0.5, 0.7, 0.9]
 
 HYPERPARAMS:
   RANDOM_SEED: 7
