--- a/src/configs/pima_diabetes.yaml
+++ b/src/configs/pima_diabetes.yaml
@@ -1,11 +1,19 @@
 CONFIGS:
-  DIABS_PATH: '../data/diabetes.csv'
-  EXCLUDE_COLS: ['Outcome', 'Pregnancies']
-  FEATURES: ['BloodPressure', 'BMI', 'Glucose', 'Insulin', 'SkinThickness']
+  CSV_PATH: '../data/healthcare-dataset-stroke-data.csv'
   POLICY: 'mean'
-  MODELS: ['mlp', 'rf', 'lr']
-  BASELINES: [null, 0.5, 0.7, 0.9]
+  MODELS: ['lr', 'rf', 'mlp']
+  BASELINES: [null, 0.5, 0.3, 0.1]
 
 HYPERPARAMS:
-  RANDOM_SEED: 7
-  TEST_SIZE: 0.2
+  RANDOM_SEED: 6
+  TEST_SIZE: 0.4
+
+FEATURES:
+  NUMERICAL: ['age', 'avg_glucose_level', 'bmi']
+  BINARY: []
+  CATEGORICAL: []
+  TARGET: ['stroke']
+  EXCLUDE_COLS: ['Outcome', 'Pregnancies']
+
+MODELS:
+  USE_ENSEMBLE: true
