--- a/tests/configs/t_configs.yaml
+++ b/tests/configs/t_configs.yaml
@@ -1,7 +1,7 @@
 CONFIGS:
   CSV_PATH: '/Users/ag46548/dev/github/KaleRP/table15/src/data/diabetes.csv'
-  POLICY: 'mean'
-  MODELS: ['lr', 'rf', 'svm', 'mlp']
+  POLICY: 'test'
+  MODELS: ['lr']
   BASELINES: [1, 0.5, 0.3, 0.1]
 
 HYPERPARAMS:
@@ -9,7 +9,7 @@ HYPERPARAMS:
   TEST_SIZE: 0.2
 
 FEATURES:
-  NUMERICAL: ['BloodPressure', 'BMI', 'Glucose', 'Insulin', 'SkinThickness']
+  NUMERICAL: ['BloodPressure']
   CATEGORICAL: []
   BINARY: []
   TARGET: ['Outcome']
